feat: added expo local authentication

--- a/app.json
+++ b/app.json
@@ -36,7 +36,13 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "Allow to do app to use Face ID."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
